--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         component: [ 'nvchecker' ]
-      steps:
+    steps:
       - uses: actions/checkout@v4
 
       # https://github.com/docker/setup-buildx-action
@@ -37,7 +37,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
-          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ matrix.componet }}
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ matrix.component }}
 
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          file: ${{ matrix.componet }}/Dockerfile
+          file: ${{ matrix.component }}/Dockerfile
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
