--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        component: [ 'nvchecker', 'caddy-webdav' ]
+        component: [ 'nvchecker', 'caddy-webdav', 'debian-builder' ]
     steps:
       - uses: actions/checkout@v4
 
