--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,15 @@ jobs:
       matrix:
         component: [ 'nvchecker', 'caddy-webdav', 'debian-builder' ]
     steps:
-      - uses: actions/checkout@v4
+      - name: Delete All Old Images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: ${{ env.REGISTRY }}/${{ github.actor }}/${{ matrix.component }}
+          package-type: 'docker'
+          token: ${{ secrets.GITHUB_PAT }}
+          min-versions-to-keep: 0
 
+      - uses: actions/checkout@v4
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
