--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,64 +1,14 @@
-name: Docker
+name: Build and Push Docker Image
+run-name: Build and Push ${{ github.ref_name }}
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ "master" ]
-    paths-ignore:
-      - '.github/dependabot.yml'
-      - 'README.md'
-
-env:
-  REGISTRY: ghcr.io
+    branches-ignore:
+      - "master"
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    strategy:
-      fail-fast: false
-      matrix:
-        component: [ 'nvchecker', 'caddy-webdav', 'debian-builder', 'typst' ]
-    steps:
-      - name: Delete All Old Images
-        uses: dataaxiom/ghcr-cleanup-action@v1
-        with:
-          delete-untagged: true
-          package: ${{ matrix.component }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-        continue-on-error: true
-
-      - uses: actions/checkout@v4
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
-
-      # https://github.com/docker/login-action
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata for ${{ matrix.component }}
-        id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ matrix.component }}
-
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@1dc73863535b631f98b2378be8619f83b136f4a0 # v6.17.0
-        with:
-          context: .
-          push: true
-          file: ${{ matrix.component }}/Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  call-docker-build:
+    uses: adamanteye/actions/.github/workflows/docker.yml@master
+    with:
+      name: ${{ github.ref_name }}
+      owner: $ {{ github.repository_owner }}
