ci(permission): allow writing packages
Signed-off-by: adamanteye <ada@adamanteye.cc>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   call-docker-build:
+    permissions:
+      contents: read
+      packages: write
     uses: adamanteye/actions/.github/workflows/docker.yml@master
     with:
       name: ${{ github.ref_name }}
