--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,4 @@ jobs:
       name: ${{ github.ref_name }}
       owner: ${{ github.repository_owner }}
       arch: ${{ matrix.arch }}
+      label: ${{ github.ref_type != 'tag' && 'latest' || github.ref_name }}
